--- a/index.html
+++ b/index.html
@@ -22,9 +22,28 @@
   </header>
 
   <main class="container hero">
-    <h2>Fast. Reliable. Life-saving.</h2>
-    <p class="lead">Request an ambulance quickly with pickup and hospital selection on a map.</p>
-    <a class="btn primary" href="/booking.html">Book an Ambulance</a>
+    <h2>Fast. Reliable. Life-saving Ambulance Service</h2>
+    <p class="lead">We provide rapid ambulance response with multiple ambulance types. Book an ambulance, choose a nearby hospital, and track ETA — no login required.</p>
+
+    <section class="services">
+      <h3>Our Services</h3>
+      <ul>
+        <li>Emergency transport (Advanced Life Support, Basic Life Support)</li>
+        <li>Inter-hospital transfers</li>
+        <li>Critical care ambulances</li>
+        <li>Neonatal & obstetric transfers</li>
+      </ul>
+      <h4>Ambulance Types</h4>
+      <div class="ambulance-types">
+        <div class="type"><strong>BLS</strong><div class="muted">Basic Life Support — for non-critical transport</div></div>
+        <div class="type"><strong>ALS</strong><div class="muted">Advanced Life Support — paramedic + critical care</div></div>
+        <div class="type"><strong>MICU</strong><div class="muted">Mobile ICU — ventilator-capable</div></div>
+      </div>
+
+      <div style="margin-top:16px;">
+        <a class="btn primary" href="/booking.html">Book an Ambulance</a>
+      </div>
+    </section>
   </main>
 
   <footer class="container footer">
